# whatever

./: Cargo.toml  bin.js  install.js  node-platform.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
crates/whatever/: Cargo.toml
crates/whatever/src/: commands.rs  main.rs
crates/whatever/src/commands/: init.rs
npm/darwin-arm64/: package.json
npm/example/: package.json
