[package]
name = "whatever"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
glob = "0.3.1"

[[bin]]
edition = "2018"
name = "whatever"
path = "src/main.rs"
